<resources>
    <string name="app_name">File Transfer EcoSystem Android Client (FTES AC)</string>

    <string name="upload_description">Upload Files</string>
    <string name="download_description">Download Files</string>
    <string name="new_dir_description">Create new directory</string>
    <string name="remove_description">Remove files</string>

    <string name="title_login">Login</string>
    <string name="night_theme">Night theme</string>
    <string name="code_root_directory">"SD card root directory is:"</string>
    <string name="server_ip">Enter the server IP</string>
    <string name="login">Enter the login</string>
    <string name="password">Enter the password</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>

    <string name="title_client">Client</string>

    <string name="title_server">Server</string>

    <string name="title_server_with_saf">Server with quick access</string>

    <string name="directory_name_dialog_title">Enter the directory name</string>
    <string name="directory_name_dialog_positive_button">OK</string>
    <string name="directory_name_dialog_negative_button">Cancel</string>

    <string name="path_field">%s%s</string>
</resources>